# ketcher

./: .gitmodules
server/: CMakeLists.txt  ketcher-server-release.py  ketcher_server.explist  ketcher_server.so.map
server/java/: pom.xml
server/java/jar/: pom.xml
server/java/jar/src/main/java/com/ggasoftware/ketcher/: KetcherServer.java
server/java/jar/src/test/java/com/ggasoftware/ketcher/: KetcherServerTest.java
server/java/src/main/java/com/ggasoftware/ketcher/: KetcherServer.java  KetcherServerLib.java
server/java/src/main/webapp/WEB-INF/: web.xml
server/java/war/: pom.xml
server/java/war/src/main/java/com/ggasoftware/ketcher/: ContextListener.java  KetcherServerMapping.java
server/java/war/src/main/webapp/WEB-INF/: web.xml
server/java/war/src/main/webapp/WEB-INF/conf/: log4j.xml
server/java/war/src/test/java/com/ggasoftware/ketcher/: KetcherServerMappingTest.java
server/src/: gcc_preinclude.h  ketcher_server.cpp  ketcher_server.h  memcpy.c
server/test/: ks_test.cpp
